--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 file.count=0
 file.path=D:/data
+
+logging.level.org.springframework.security= INFO
+logging.level.org.hibernate= INFO
+logging.level.com.sapient.wellington= DEBUG
+logging.path =logs
